[package]
edition = "2024"
name = "midas-spider"
version = "0.1.0"

[dependencies]

futures = "*"
midas-core = {path = "../midas-core"}
rayon = "*"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tokio = { version = "1.0", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
